examples/negative/parse_errors/L1/if_no_then.ob
MODULE IfNoThen;

VAR b: BOOLEAN;
    x: INTEGER;

BEGIN
  IF b
    x := 4
  ELSE
    x := 42
  END
END IfNoThen.
